# MoneyMaker

./: .coveragerc  .env.example  .gitignore  LICENSE  README.md  SETUP_GCP_CREDENTIALS.md  cloudbuild.yaml  codecov.yml  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
config/: config.yaml  env.example
docs/: DEPLOYMENT.md
infra/: cloud_scheduler.tf
scripts/: deploy.ps1  deploy.sh  docker-entrypoint.sh  fix_orchestrator_permissions.ps1  grant_secret_access.ps1  init_firestore.py  run_dashboard_local.ps1  run_dashboard_local.sh  setup_gcp_credentials.ps1  setup_github_sa.ps1  setup_github_sa.sh  setup_secrets.ps1  setup_secrets.sh  update_timeout.ps1  update_timeout.sh  verify_gcp_setup.ps1
services/: __init__.py
services/ai_suggester/: Dockerfile  __init__.py  main.py  prompts.py  service.py
services/dashboard/: Dockerfile  __init__.py  main.py
services/dashboard/static/: index.html
services/monitor/: Dockerfile  __init__.py  main.py  service.py
services/orchestrator/: Dockerfile  __init__.py  main.py  service.py  workflows.py
services/scraper/: Dockerfile  __init__.py  filters.py  main.py  service.py
services/trader/: Dockerfile  __init__.py  main.py  service.py
shared/: __init__.py  config.py  firestore_client.py  gemini_client.py  models.py  polymarket_client.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_ai_suggester_endpoints.py  test_dashboard_endpoints.py  test_discovery_workflow.py  test_filters_and_prompts.py  test_monitor_endpoints.py  test_monitor_workflow.py  test_orchestrator_endpoints.py  test_scraper_endpoints.py  test_service_integration.py  test_shared_clients.py  test_trader_endpoints.py
tests/fixtures/: ai_responses.json  markets.json  positions.json
tests/integration/: __init__.py
tests/unit/: __init__.py  test_ai_suggester.py  test_ai_suggester_main.py  test_filters.py  test_monitor.py  test_monitor_main.py  test_orchestrator.py  test_orchestrator_main.py  test_scraper.py  test_scraper_main.py  test_trader.py  test_trader_main.py
tests/unit/shared/: test_config.py  test_firestore_client.py  test_gemini_client.py  test_models.py  test_polymarket_client.py
